--- a/CSS/product.css
+++ b/CSS/product.css
@@ -10,13 +10,13 @@
     flex-wrap: wrap;
   }
   .product .column {
-    margin-left: 5%;
-    padding-left: 130px;
+    margin-left: 4%;
+    padding-left: 140px;
   }
   .product img {
     height: 200px;
     width: 200px;
-    border-radius: 50%; 
+    
   }
   #product-title {
     text-align: center; 
@@ -28,11 +28,14 @@
     padding: 5px 10px;
     border: none;
     border-radius: 5px;
-    background-color: #4CAF50;
+    background-color: grey;
     color: #FFFFFF;
     font-size: 14px;
     cursor: pointer;
     padding-left: 30px;
+  }
+  button:hover{
+    background-color: #f60;
   }
   .text-feild{
     display: flex;
@@ -47,8 +50,9 @@
   }
   p{
     margin-bottom: 5px;
-    margin-left: 35px;
+    
   }
+  
   
   
   
